version/0.22/_sources/api/solver/_autosummary/settings/incoming_wave.rst.txt
:orphan:

.. _incoming_wave:

incoming_wave
=============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.incoming_wave.incoming_wave
    :show-inheritance:

.. rubric:: Attributes

==================================   =======================================================

Attribute                                                                            Summary

==================================   =======================================================
:ref:`option <option_17>`                Specify how the boundary condition will be defined.

:ref:`value <value_13>`                             Specify value as constant or expression.

:ref:`profile_name <profile_name>`                          Specify the name of the profile.

:ref:`field_name <field_name>`                                Specify the name of the field.

:ref:`udf <udf>`                              Specify the name of the user-defined function.

==================================   =======================================================

.. rubric:: Included in:

=============================   =======================

Parent                                          Summary

=============================   =======================
:ref:`momentum <momentum>`          Help not available.

:ref:`momentum <momentum_1>`        Help not available.

:ref:`momentum <momentum_2>`        Help not available.

:ref:`momentum <momentum_3>`        Help not available.

:ref:`momentum <momentum_6>`        Help not available.

:ref:`momentum <momentum_8>`        Help not available.

:ref:`momentum <momentum_9>`        Help not available.

:ref:`momentum <momentum_10>`       Help not available.

=============================   =======================

